fixing navbar gap and changing login/out icons

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
   list-style-type: none;
   margin: 10px;
   padding: 10px;
+  column-gap: 2rem;
 }
 
 .nav-brand {
